--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
   </head>
   <body>
+      
+       
+    <p><a href="explain.js" style="color: #ffd9e0" target="_blank">codraw</a></p>
     <script src="sketch.js"></script>
   
 
