--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   <body>
       
        
-    <p><a href="explain.js" style="color: #ffd9e0" target="_blank">codraw</a></p>
+<!--     <p><a href="explain.js" style="color: #ffd9e0" target="_blank">codraw</a></p> -->
+      <!--     codraw drop down -->
+    <button type="button" class="collapsible">codraw</button>
+<div class="content">
+  <p>codraw is a web app to learn to code throught drawing</p>
+</div>
     <script src="sketch.js"></script>
   
 
