--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!--     codraw drop down -->
     <button type="button" class="collapsible">codraw</button>
 <div class="content">
-  <p>codraw is a web app to learn to code throught drawing</p>
+  <p>a web app to learn to code throught drawing</p>
 </div>
     <script src="sketch.js"></script>
   
